--- a/Views/Pages/BlacklistPage.xaml
+++ b/Views/Pages/BlacklistPage.xaml
@@ -1,4 +1,4 @@
-<Page x:Class="OpenRdpGuard.Views.Pages.BlacklistPage"
+﻿<Page x:Class="OpenRdpGuard.Views.Pages.BlacklistPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -16,13 +16,25 @@
                     <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                         <TextBlock Text="扫描范围：" VerticalAlignment="Center" Margin="0,0,6,0"
                                    Foreground="{DynamicResource SecondaryTextBrush}" />
-                        <ComboBox Width="90" ItemsSource="{Binding ScanOptions}" SelectedItem="{Binding SelectedScanHours}"
+                        <ComboBox Width="70" ItemsSource="{Binding ScanOptions}" SelectedItem="{Binding SelectedScanHours}"
                                   Background="{DynamicResource CardBackgroundBrush}"
                                   Foreground="{DynamicResource PrimaryTextBrush}"
                                   BorderBrush="{DynamicResource CardBorderBrush}" />
                         <TextBlock Text="小时" VerticalAlignment="Center" Margin="6,0,0,0"
                                    Foreground="{DynamicResource SecondaryTextBrush}" />
                         <Button Content="开始扫描并封禁" Margin="12,0,0,0" Style="{StaticResource PrimaryButtonStyle}" Command="{Binding ScanAndBlockCommand}" />
+                        <CheckBox Content="实时监控" Margin="40,0,0,0" VerticalAlignment="Center"
+                                  IsChecked="{Binding IsMonitoring}"
+                                  Foreground="{DynamicResource SecondaryTextBrush}" />
+                        <TextBlock Text="监控间隔(分钟)" VerticalAlignment="Center" Margin="8,0,6,0"
+                                   Foreground="{DynamicResource SecondaryTextBrush}" />
+                        <TextBox Width="60"
+                                 Text="{Binding MonitorIntervalMinutes, UpdateSourceTrigger=PropertyChanged}"
+                                 PreviewTextInput="MonitorInterval_PreviewTextInput"
+                                 DataObject.Pasting="MonitorInterval_OnPaste"
+                                 Background="{DynamicResource CardBackgroundBrush}"
+                                 Foreground="{DynamicResource PrimaryTextBrush}"
+                                 BorderBrush="{DynamicResource CardBorderBrush}" />
                     </StackPanel>
                 </StackPanel>
             </Border>
