--- a/Views/Pages/UsersPage.xaml
+++ b/Views/Pages/UsersPage.xaml
@@ -1,4 +1,4 @@
-<Page x:Class="OpenRdpGuard.Views.Pages.UsersPage"
+﻿<Page x:Class="OpenRdpGuard.Views.Pages.UsersPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -16,7 +16,7 @@
         <Border Style="{StaticResource CardBorderStyle}">
             <Grid>
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="&#xE77B;" FontFamily="Segoe MDL2 Assets" Margin="0,0,8,0" Foreground="{DynamicResource MutedTextBrush}" />
+                    <TextBlock Text="&#xE77B;" FontFamily="Segoe MDL2 Assets" Margin="0,0,8,0" Foreground="{DynamicResource MutedTextBrush}" VerticalAlignment="Center" />
                     <TextBlock Text="用户管理" Style="{StaticResource PageTitleTextStyle}" />
                 </StackPanel>
                 <Button Content="刷新列表" Width="100" HorizontalAlignment="Right" Style="{StaticResource PrimaryButtonStyle}" Command="{Binding RefreshCommand}" />
